# brainwatch

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  config.example.toml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
deploy/systemd/: brainwatch.env.example  brainwatch.service  brainwatch.timer
docs/: configuration.md  openclaw.md  providers.md  scheduling.md
docs/superpowers/plans/: 2026-07-15-brainwatch-standalone-implementation.md
docs/superpowers/specs/: 2026-07-15-brainwatch-standalone-design.md
examples/: availability.jsonl  latest-report.json  status.txt  usage.jsonl
scripts/: sanitize_check.py
src/brainwatch/: __init__.py  __main__.py  cli.py  config.py  health.py  ledger.py  models.py  ranking.py  reporting.py  security.py  storage.py  trend.py
src/brainwatch/integrations/: openclaw.py
src/brainwatch/providers/: __init__.py  base.py  openai_compatible.py  openrouter.py  probe.py
tests/: test_cli.py  test_config.py  test_distribution_assets.py  test_health.py  test_ledger.py  test_openai_compatible_provider.py  test_openclaw_integration.py  test_openrouter_provider.py  test_probe.py  test_ranking.py  test_release_assets.py  test_reporting.py  test_security.py  test_storage.py  test_trend.py
