[build-system]
requires = ["hatchling>=1.25,<2"]
build-backend = "hatchling.build"

[project]
name = "brainwatch"
dynamic = ["version"]
description = "A zero-spend model availability watchdog for OpenRouter and OpenAI-compatible providers"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "KJ5IRQ" }]
keywords = ["llm", "monitoring", "openrouter", "openai-compatible"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = ["requests>=2.31,<3"]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "pytest>=8.2,<10",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
  "twine>=5.1,<7",
]

[project.scripts]
brainwatch = "brainwatch.cli:main"

[project.urls]
Repository = "https://github.com/KJ5IRQ/brainwatch"
Issues = "https://github.com/KJ5IRQ/brainwatch/issues"

[tool.hatch.version]
path = "src/brainwatch/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/brainwatch"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["B", "E", "F", "I", "S", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.coverage.run]
branch = true
source = ["brainwatch"]

[tool.coverage.report]
show_missing = true
skip_covered = true
